--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "nodemon --config nodemon.json  --exec \"node --require ts-node/register --inspect=9001  src/index.ts\""
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
